[gd_scene load_steps=6 format=3 uid="uid://bppli234bmopk"]

[ext_resource type="Script" path="res://Scripts/inventory_slot.gd" id="1_kdijw"]
[ext_resource type="Texture2D" uid="uid://qxcsfuhsrm5x" path="res://Assets/Sprites/tweezers.png" id="2_nq2a3"]
[ext_resource type="FontFile" uid="uid://dbujpgfdoqmp3" path="res://Assets/Fonts/yoster.ttf" id="3_swiht"]
[ext_resource type="Texture2D" uid="uid://mfkg711ftp4j" path="res://Assets/Test_Button.png" id="4_eqoia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o2q1q"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1102.0
offset_bottom = -598.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kdijw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemIcon" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_nq2a3")
stretch_mode = 4

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_swiht")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_o2q1q")

[node name="Details" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 50.0
offset_right = 150.0
offset_bottom = 50.0
texture = ExtResource("4_eqoia")

[node name="MarginContainer" type="MarginContainer" parent="Details"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Details/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Details/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_swiht")
theme_override_font_sizes/font_size = 15
text = "Name"

[node name="TypeLabel" type="Label" parent="Details/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_swiht")
theme_override_font_sizes/font_size = 15
text = "Type"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
